# token-throttle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  MIGRATION.md  README.md  Taskfile.yml  deferred-findings.md  fix-report.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  soak.yml  tokenizer-drift.yml
benchmarks/: README.md  __init__.py  _stats.py  _workloads.py  run.py
devtools/: bump_readme_version.py
docs/: api.md  configuration.md  custom-backends.md  observability.md  operations.md
examples/: __init__.py  anthropic_prompt_caching.py
findings/: W1-defer-docs.md  W2-custom-backends-conformance.md  W3-mypy-scope-and-implement.md  W4-platform-and-settings.md
tests/: _redis_guard.py  conftest.py  test_redis_bucket_max_capacity.py
tests/canary/: test_tokenizer_drift.py
tests/conformance/: __init__.py  test_backend_conformance.py  test_conformance_robustness.py  test_conformance_semantics.py  test_diagnose_backend_protocol.py  test_harness_critical_tuple_consistency.py  test_no_hand_rolled_callback_ladders.py  test_openai_import_portability.py  test_public_path_probes.py  test_redis_import_portability.py  test_run_step_wrappers.py  test_sync_async_surface_parity.py
tests/integration/: conftest.py  test_apply_configured_max_capacity_redis.py  test_backend_behavior.py  test_cancellation_redis.py  test_concurrency.py  test_condition_wake_redis.py  test_diagnose_redis.py  test_end_to_end.py  test_lock_cancel_leak.py  test_lock_ttl_extension.py  test_p4_redis_override_errors.py  test_p4_redis_partial_state.py  test_p5_redis_cancellation_storm.py  test_p5_redis_close_refunds.py  test_record_usage_integration.py  test_redis_fault_injection.py  test_redis_specific.py  test_shielded_write_edge_cases.py  test_sync_backend_behavior.py  test_sync_cancellation.py  test_sync_concurrency.py  test_sync_lock_cancel_leak.py  test_sync_redis_specific.py  test_timeout_redis.py
tests/lint/: test_public_docs_no_internal_codenames.py  test_readme_standalone_examples.py  test_redis_lock_extend.py
tests/manual/: README.md  test_anthropic_end_to_end.py  test_openai_end_to_end.py
tests/property/: test_audit_correctness.py  test_bucket_invariants.py  test_concurrent_accounting.py  test_deep_correctness_audit.py  test_h1_reservation_lifecycle_invariants.py  test_lifecycle_accounting.py  test_oracle_and_convergence.py  test_reservation_refund_lifecycle_invariants.py  test_stateful_accounting.py  test_temporal_accounting.py
tests/unit/: test_async_base_exception_cleanup.py  test_bucket_calculations.py  test_bundle_acquire_delivery_transaction.py  test_bundle_acquire_marker_authority.py  test_bundle_callback.py  test_bundle_cardinality_cap_lifecycle.py  test_bundle_close_setmax_lifecycle.py  test_bundle_counter_contract.py  test_bundle_dto_quota_strictness.py  test_bundle_extra_usage.py  test_bundle_f04_merge.py  test_bundle_footgun_func.py  test_bundle_lk_acquire_trx.py  test_bundle_lk_close_lifecycle.py  test_bundle_lk_setmax_reconcile.py  test_bundle_locktrx.py  test_bundle_longtail.py  test_bundle_math.py  test_bundle_metric_validation.py  test_bundle_migration_glob_escape.py  test_bundle_modelcopy_siblings.py  test_bundle_mt_namespace.py  test_bundle_perf_memory_bounds.py  test_bundle_perf_refund_guard_narrow.py  test_bundle_pipeline_defensive.py  test_bundle_redis_lock_hotpath.py  test_bundle_redis_migration.py  test_bundle_redis_prefix_invariants.py  test_bundle_redis_segment_bounds.py  test_bundle_redis_ttl.py  test_bundle_refund_idempotency_transaction.py  test_bundle_reservation_authority_hardening.py  test_bundle_resvttl.py  test_bundle_setmax_reconcile_parity.py  test_bundle_setstate.py  test_bundle_strict.py  test_bundle_strictness_helper.py  test_bundle_tokenizer_executor.py  test_bundle_ttl_reservation_lifetime.py  test_bundle_upgrade_legacy.py  (+77 more)
token_throttle/: __init__.py  _capacity.py  _diagnostic.py  _dto.py  _exceptions.py  _rate_limiter.py  _sync_rate_limiter.py  _validation.py  conformance.py  migration.py
token_throttle/_factories/_openai/: __init__.py  _model_family.py  _openai_rate_limiter.py  _openai_sync_rate_limiter.py  _token_counter.py
token_throttle/_interfaces/: _callable_utils.py  _callbacks.py  _interfaces.py  _models.py
token_throttle/_limiter_backends/_memory/: _backend.py  _bucket.py  _sync_backend.py
token_throttle/_limiter_backends/_redis/: _backend.py  _bucket.py  _keys.py  _server_time.py  _sync_backend.py  _sync_bucket.py  _ttl.py
