[project]
name = "token-throttle"
version = "8.0.5"
description = "Simple Multi-Resource Rate Limiting That Saves Unused Tokens. Rate limit API requests across different resources and workers without wasting your quota. Reserve tokens upfront, get refunds for what you don't use, and avoid over-limiting."
readme = "README.md"
authors = [{ name = "Elijas Dapšauskas" }]
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
keywords = ["rate-limit", "rate-limiter", "redis", "openai", "llm", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

##############################
### DEPENDENCIES
##############################

requires-python = ">=3.12"
dependencies = ["frozendict>=2.4.6,<3", "pydantic>=2.12.0,<3"]

[project.optional-dependencies]
redis = ["redis>=5.2.1,<8"]
tiktoken = ["tiktoken>=0.10.0,<1"]

[project.urls]
Repository = "https://github.com/Elijas/token-throttle"
Documentation = "https://github.com/Elijas/token-throttle#readme"
Changelog = "https://github.com/Elijas/token-throttle/blob/main/CHANGELOG.md"
Issues = "https://github.com/Elijas/token-throttle/issues"

[dependency-groups]
dev = [
    "bump-my-version>=1.1.2",
    "hypothesis>=6.100.0",
    "mypy>=1.10",
    "openai>=1.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "pytest-watch>=4.2.0",
    "ruff>=0.11.7",
]

##############################
### BUMP VERSION
##############################

[tool.bumpversion]
current_version = "8.0.5"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "chore(release): bump version from {current_version} to {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "token_throttle/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

##############################
### BUILD
##############################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["token_throttle"]

##############################
### PYTEST AND COVERAGE
##############################

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "redis: requires a running Redis instance",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["token_throttle"]
branch = true

[tool.coverage.report]
omit = ["notebooks/*", "*/deprecated/*", "tests/*"]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 85


##############################
### MYPY
##############################

[tool.mypy]
python_version = "3.12"
# W3: the CI type gate covers the complete typed package. It requires all
# optional extras because Redis/OpenAI/tiktoken integrations are checked too.
files = ["token_throttle/"]
explicit_package_bases = true


##############################
### RUFF
##############################

[tool.ruff]
lint.ignore = [
    # --- Complexity & Control Flow ---
    "C901",    # Function is too complex
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "TRY300",  # Consider moving this statement to an `else` block

    # --- Naming & Formatting ---
    "N999",   # Ignore invalid module name
    "E501",   # Line too long
    "COM812", # Trailing comma missing

    # --- Return/Assignment & Warnings ---
    "RET504", # Unnecessary assignment before `return` statement
    "B028",   # No explicit `stacklevel` keyword argument found
    "PGH003", # Use explicit error codes with "# type: ignore"

    # --- Exception Handling ---
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "TRY003", # Avoid specifying long messages outside the exception class

    # --- Docstrings & Type Annotations ---
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in `__init__`
    "D200",   # One-line docstring should fit within a single line
    "D203",   # 1 blank line required before class docstring
    "D205",   # 1 blank line required between summary line and description
    "D212",   # Multi-line docstring summary should start at the first line
    "D400",   # First line should end with a period
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `root`
    "D401",   # First line of docstring should be in imperative mood
    # "D413",  # Missing blank line after last section
    "D415",   # First line should end with a period, question mark, or exclamation point
    "ANN001", # Missing type annotation for function argument `item`
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special method `__init__`
    "ANN205", # Missing return type annotation for static method
]

# Code Style/Structure
lint.select = ["ALL"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underssrc-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

exclude = [
    "deprecated",
    "notebooks",

    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Python 3.12 is the minimum supported version.
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"devtools/**/*.py" = [
    "T201",    # print() statement found
    "C901",    # Function is too complex
    "PLR0912", # Too many branches
]
"token_throttle/_interfaces/_interfaces.py" = [
    "ARG002",    # bucket_ids is part of interface contract, unused in default implementations
    "TC001",     # Pydantic models need these imports at runtime
    "ASYNC109",  # timeout is part of the public API, not an asyncio.timeout() replacement
]
"token_throttle/_interfaces/_callbacks.py" = [
    "PLC0415", # Intentional lazy import of optional logging backend
]
"token_throttle/_factories/_openai/_token_counter.py" = [
    "PLC0415", # Intentional lazy import of optional dep (tiktoken)
]
"token_throttle/_limiter_backends/_memory/_backend.py" = [
    "ASYNC109",  # timeout is a public API parameter, not asyncio.timeout()
    "PLR0915",   # await_for_capacity is inherently complex (capacity polling + reconfiguration)
]
"token_throttle/_limiter_backends/_memory/_sync_backend.py" = [
    "PLR0915",   # wait_for_capacity is inherently complex (capacity polling + reconfiguration)
]
"token_throttle/_limiter_backends/_redis/_backend.py" = [
    "ASYNC109",  # timeout is a public API parameter, not asyncio.timeout()
    "PLR0915",   # await_for_capacity is inherently complex (capacity polling + reconfiguration)
]
"token_throttle/_rate_limiter.py" = [
    "ASYNC109",  # timeout is a public API parameter, not asyncio.timeout()
]
"tests/**/*.py" = [
    "PT006",   # Wrong type passed to first argument of `pytest.mark.parametrize`; expected `tuple`
    "ANN201",  # Missing return type annotation for public function
    "ARG001",  # Unused function argument (callback stubs matching protocol signatures)
    "ARG002",  # Unused method argument (fixtures injected by pytest)
    "ASYNC109", # timeout param in test fakes mirrors real API signature
    "BLE001",  # Blind exception catch (intentional in concurrent test harnesses)
    "D213",    # Multi-line docstring summary should start at the second line
    "ERA001",  # Commented-out code (invariant formulas documented as comments)
    "S101",    # Use of `assert` detected
    "S102",    # Use of `exec` detected (star-import test)
    "SLF001",  # Private member accessed (expected in tests)
    "PLR2004", # Magic value used in comparison
    "T201",    # print() statement found
    "G004",    # Checks for uses of f-strings to format logging messages.
]
